Implement Screen 3 RememberInfiniteTransition

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">AnimationAssignment</string>
-    <string name="student">This is animation demo 2. My student ID is 30372527. This is Anjali Thapa Magar.</string>
+    <string name="student">This is animation demo 2. My student ID is 30372527.</string>
 </resources>
